# address-lang

./: .gitignore  Cargo.toml  README.md  add.json  grammar_specification.md  loop.json
.github/workflows/: ci-build.yml
adl-cli/: Cargo.toml
adl-cli/src/: main.rs
adl-cli/src/commands/: codegen.rs  interpret.rs  mod.rs  parse.rs  run.rs
codegen/: Cargo.toml
codegen/src/: bytecode.rs  gen.rs  lib.rs  main.rs
codegen/src/bytecode/: io.rs  mod.rs  serializer.rs
codegen/test/: loop.adl  mulderef.adl
codegen/test/adl/: loop.adl  mulderef.adl
codegen/test/bytecode/: loop_bytecode.txt  test_bytecode.txt
common/: Cargo.toml
common/src/: lib.rs
common/src/location/: mod.rs
common/src/typings/: mod.rs
common/src/util/: mod.rs
examples/: gcd.adl  hello_world.adl  minus_deref.adl
examples/ast/: add.json
examples/basic_operations/: add.adl  minus_deref.adl
examples/basic_operations/deref/: deref.cpp  deref.txt
examples/list/: concat.adl  length.adl  lib.adl  print.adl  remove_element.adl
examples/list/no_sugar_syntax/: create_list.adl
examples/loop/: loop.adl  loop_list_squaring.adl  loop_with_go_to_out_loop.adl
examples/object/: person.adl  person.cpp  person.txt
examples/subprogram/: list.adl  square.adl
examples/tree/: address_specific_approach.adl  common_approach.adl  common_approach.cpp  common_approach.txt  lib.adl  tree.adl  tree_orig.adl
examples/tree/binary_tree/: common_approach.txt
examples/tree/binary_tree/insert/: impl.adl  impl.cpp  impl.txt
examples/tree/binary_tree/min/: impl.adl  impl.cpp  impl.txt
examples/tree/binary_tree/remove/: impl.adl  impl.cpp  impl.txt
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs
interpreter/src/evaluation/: builtins.rs  errors.rs  loop_.rs  mod.rs  runtime_context.rs  subprogram.rs  value.rs
interpreter/src/module/: mod.rs
lexer/: Cargo.toml
lexer/src/: errors.rs  lexer.rs  lib.rs  matcher.rs  token.rs
parser/: Cargo.toml  build.rs  rules.txt
parser/examples/: sub_program.adl  sum_test.adl  test.adl
parser/examples/import/: example1.adl
parser/examples/list/: example_1.adl  get_element.adl  length.adl  list.adl  list_no_syntax_sugar.adl
parser/examples/list/no_sugar_syntax/: create_list.adl  list_of_lists.adl
parser/examples/list/print_list/: list_creation.adl  list_no_syntax_sugar.adl  list_of_lists.adl  list_of_lists_no_syntax_sugar.adl  list_of_lists_no_syntax_sugar1.adl
parser/examples/loop/: loop_list_squaring.adl  loop_with_go_to1.adl  simple_loop.adl
parser/examples/subprogram/: list.adl
parser/examples/tree/: tree.adl  tree_no_sugar_syntax.adl
parser/src/: ast.rs  builtins.rs  evaluation.rs  grammar.lalrpop  lib.rs  main.rs  test.adl
parser/src/ast/: mod.rs  serializer.rs  visitor.rs
parser/src/diagnostics/: error_printer.rs
parser/src/errors/: mod.rs
parser/src/evaluation/: builtins.rs  environment.rs  errors.rs  loop_.rs  mod.rs  runtime_context.rs  subprogram.rs  value.rs
parser/src/lexer/: errors.rs  location.rs  matcher.rs  mod.rs  token.rs
parser/src/location/: mod.rs
parser/src/text/: mod.rs  span.rs
parser/src/typings/: mod.rs
value/: Cargo.toml
value/src/: error.rs  lib.rs
vm/: Cargo.toml  README.md
vm/src/: builtins.rs  lib.rs  main.rs  vm.rs
vm/src/builtins/: mod.rs  print.rs  string.rs
vm/src/heap/: mod.rs
vm/src/scope/: mod.rs
vm/src/vm/: builtins.rs  error.rs  mod.rs  scope.rs  tests.rs
vscode-adl-extension/: language-configuration.json  package.json
vscode-adl-extension/syntaxes/: adl.tmLanguage.json
