[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "interpreter"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
common = { path = "../common" }
lexer = { path = "../lexer" }
colored = "2.0"