[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
common = { path = "../common" }
value = { path = "../value" }
colored = "2.0"