[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

description = "The lexer for the address programming language"

[lib]
path = "src/lib.rs"

# This section is for the binary
[[bin]]
name = "lexer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
queues = "1.0.2"