[package]
name = "parser"
version = "0.1.0"
edition = "2021"

description = "The parser for the address programming language"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
adl_lexer = { path = "../lexer" }
colored = "2.0"
queues = "1.0.2"
lalrpop-util = {version = "0.20.0", features = ["lexer"]}