[package]
name = "parser"
version = "0.1.0"
edition = "2021"

description = "The parser for the address programming language"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parser"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lexer = { path = "../lexer" }
common = { path = "../common" }
lalrpop-util = {version = "0.20.0", features = ["lexer"]}