[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "vm"
path = "src/main.rs"

[dependencies]
codegen = { path = "../codegen" }
parser = { path = "../parser" }
common = { path = "../common" }
value = { path = "../value" }
log = "0.4"
env_logger = "0.11.3"
